记仇小本本

--- a/_posts/2018-09-29-Comment.md
+++ b/_posts/2018-09-29-Comment.md
@@ -1,16 +1,21 @@
 ---
 layout:     post
-title:      评论		
+title:      胡申奥		
 subtitle:   
 date:       2018-09-29
-author:     樱酱
+author:     记仇的小本本
 header-img: img/710133.png
 catalog: 	 true
 ---
->评论过几天就会开通有任何事情邮箱联系
 >
->## 我的邮箱是 2330263274@qq.com 
-><https://mail.qq.com>
+>
+>## 今天我非常伤心、
+
+> 今天那只狒狒不知道抽什么疯把我一张图片删掉了我非难受。
+>
+> 所以请大家加那只狒狒QQ好友1913999501<http://w.qq.com/>
+>
+> 请大家dis他
 
 
 
