--- a/_posts/国庆节.md
+++ b/_posts/国庆节.md
@@ -1,9 +1,9 @@
 ---
 layout:     post
 title:      大家国庆节快乐		
-subtitle:   
+subtitle:   YJ
 date:       2018-10-01
-author:     
+author:     YJ
 header-img: img/710133.png
 catalog: 	 true
 ---
