Update and rename _posts/2018-11-27-Cisco.md to  _posts/2018-11-27-Cisco.md

--- a/_posts/2018-11-27-Cisco.md
+++ b/_posts/2018-11-27-Cisco.md
@@ -10,8 +10,8 @@ catalog: 	 true
 ### native vlan 
 
 >native vlan所属的帧在经过trunk时不打标签。
-
->native vlan在trunk两端必须匹配，否则会出现vlan流量互串。
+>肖
+> native vlan在trunk两端必须匹配，否则会出现vlan流量互串。大傻子
 
 >默认的native vlan是vlan 1。
 
@@ -54,8 +54,8 @@ catalog: 	 true
 ### vtp的配置
 
 >vtp domain cisco  //配置vtp域名
-
->vtp mode （server | client | transparent）  //配置本机vtp模式
+>肖大傻
+> vtp模式（服务器| 客户| 透明）//配置本机vtp模式
 
 >vtp password x  //配置密码
 
