Update and rename _posts/2018-11-27-Cisco.md to  _posts/2018-11-27-Cisco.md

--- a/_posts/2018-11-27-Cisco.md
+++ b/_posts/2018-11-27-Cisco.md
@@ -14,7 +14,7 @@ catalog: 	 true
 > native vlan在trunk两端必须匹配，否则会出现vlan流量互串。大傻子
 
 >默认的native vlan是vlan 1。
-
+>xiao da sha zi
 >建议将一个生僻的vlan配置为native vlan。
 
 >配置：switchport trunk native vlan 2。
